--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -30,7 +30,7 @@ spring:
         - id: Time-Entry-Service
           uri: lb://Time-Entry-Service
           predicates:
-            - Path=/time-entry/**
+            - Path=/api/v1/time/**
         - id: Authentication-Service
           uri: lb://Authentication-Service
           predicates:
