feat: docker-compose::project-service with Kafka connectivity fix
Project-Service dockerized and integrated with docker-compose, overcoming
significant Kafka connectivity issues.

Issue:
- AdminClient persistently attempted to connect to `localhost:9092` instead
  of the specified Kafka container, causing connection failures.

Troubleshooting steps:
1. Modified environment variables in docker-compose
2. Added extensive logging for Kafka-related configurations
3. Enabled debug mode for deeper insights
4. Experimented with various Kafka client configurations

Resolution:
- Explicitly configured `KafkaAdmin` and `AdminClient` beans
- This overrode Spring Boot's auto-configuration, ensuring correct
  bootstrap server settings

Key changes:
- Added `Project-Service#com.seyed.ali.projectservice.config.event.KafkaConfiguration` class with explicit bean definitions
- Consolidated Kafka host and port into a single environment variable
- Enhanced logging for easier debugging of Kafka properties

Lessons learned:
- Importance of explicit configuration in containerized environments
- Awareness of Spring Boot's auto-configuration behavior
- Value of comprehensive logging in resolving connectivity issues

--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -28,11 +28,6 @@ spring:
   cloud:
     gateway:
       routes:
-        - id: Time-Entry-Service
-          uri: lb://Time-Entry-Service
-          predicates:
-            - Path=/api/v1/time/**
-
         - id: Authentication-Service
           uri: lb://Authentication-Service
           predicates:
@@ -45,6 +40,16 @@ spring:
           uri: lb://Authentication-Service
           predicates:
             - Path=/keycloak/**
+
+        - id: Time-Entry-Service
+          uri: lb://Time-Entry-Service
+          predicates:
+            - Path=/api/v1/time/**
+
+        - id: Project-Service
+          uri: lb://Project-Service
+          predicates:
+            - Path=/api/v1/project/**
 
 --- # Custom Variables
 microservice:
