feat: docker-compose::task-service integration
Task-Service dockerized and integrated with docker-compose, incorporating
lessons learned from previous service integrations.

Key changes:
1. Docker-compose configuration:
   - Added Task-Service with necessary environment variables
   - Set up healthcheck using curl
   - Defined service dependencies

2. API Gateway configuration:
   - Added routing for Task-Service under /api/v1/task/** path

3. Task-Service Kafka configuration:
   - Utilized KAFKA_SERVER_HOST_AND_PORT environment variable
   - Set default fallback to localhost:9092 for local development

4. Dockerfile enhancement:
   - Installed curl for healthcheck functionality

This integration streamlines the Task-Service deployment within our
microservices architecture, maintaining consistency with other services
and incorporating best practices for containerized environments.

--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -51,6 +51,11 @@ spring:
           predicates:
             - Path=/api/v1/project/**
 
+        - id: Task-Service
+          uri: lb://Task-Service
+          predicates:
+            - Path=/api/v1/task/**
+
 --- # Custom Variables
 microservice:
   authentication-service:
